--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,10 +8,11 @@ openpyxl==3.1.2
 PyJWT==2.8.0
 prophet==1.1.5
 joblib==1.4.2
-matplotlib==3.9.2
+matplotlib>=3.5.0
+requests==2.31.0
 openmeteo-requests==1.2.0
 requests-cache==1.2.0
 retry-requests==2.0.0
-numpy==1.26.4
-pandas==2.2.2
+numpy>=1.23.0
+pandas>=2.0.0
 APScheduler==3.10.4
